[package]
name = "joystick-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
futures-util = "0.3.31"
tokio = { version = "1.40.0", features = ["full","sync", "rt", "macros"] }

# websocket
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }

# serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tungstenite = "0.24.0"
base64 = "0.22.1"
dotenv = "0.15.0"
chrono = "0.4.38"
