[package]
name = "joysticktv"
version = "0.1.1-alpha"
edition = "2024"

[features]
export_deps = []

[lib]
path = "src/lib.rs"

[dependencies]
# logging
tracing = "0.1.44"

# async
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["sync"] }

# websocket
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
base64 = "0.22.1"
chrono = "0.4.42"

# error handling
meby = "0.1.0"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = "0.3.22"
tokio = { version = "1.48.0", features = ["full"] }